--- a/app/css/ensuring_target.css
+++ b/app/css/ensuring_target.css
@@ -10,8 +10,7 @@ body {
     padding: 0 .77rem; }
   .target_ctrl .first {
     color: #999;
-    font-size: 13px;
-    padding: 0 .77rem; }
+    font-size: 13px; }
   .target_ctrl .relation {
     width: 204px;
     margin: 40px auto 0;
