--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -51,7 +51,7 @@
 <div class="nav">
 	<a href="javascript:" class="item" id="showShare"><img src="img/temai/nav-1.png"><div >0元抢</div></a>
 	<a href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=2247483661&idx=2&sn=d82a023226be4da52af4aa60669bab2e#rd" class="item"><img src="img/temai/nav-2.png"><div>怎么买</div></a>
-	<a href="/index.html#/index" class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></a>
+	<a href="/index.html#/target" class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></a>
 	<a href="/#temailist" class="item"><img src="img/temai/nav-4.png"><div>更多保障</div></a>
 </div>
 
