--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -6,7 +6,7 @@ body {background: #f5f5f5;}
 	color: #555;
 	text-align: center;
 	.who {font-size: 18px;padding: 0 .77rem;}
-	.first {color: #999;font-size: 13px;padding: 0 .77rem;}
+	.first {color: #999;font-size: 13px;}
 	.relation {
 		width: 204px;
 		// margin-top: 40px;
