--- a/app/css/userinfo_new.css
+++ b/app/css/userinfo_new.css
@@ -1,6 +1,18 @@
 @charset "UTF-8";
 body {
   background: #f5f5f5; }
+.no {
+  pointer-events: none; }
+.aa {
+  height: 60px;
+  width: 100%;
+  position: absolute;
+  top: 3px; }
+.yy {
+  height: 60px;
+  width: 100%;
+  position: absolute;
+  top: 3px; }
 .userinfo_new {
   padding: .258rem 0;
   font-size: 15px;
