--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/ensuring_target.css?rev=3d6c009b82beaf6bf352dd8981713783">
+<link rel="stylesheet" href="css/ensuring_target.css?rev=e868b4d6702a29ca7854f673ebd7d43a">
 <div class="target_ctrl">
 	<div class="who">为谁投保？</div>
 	<div class="first">建议优先保障家庭收入的主要贡献者</div>
@@ -10,7 +10,7 @@
 
 		<div class="column">
 			 <div class="column_btn linshi"  data-relation="4" ng-click="clickBtn(2)">配 偶</div>
-			<div class="column_btn no_up" style="background:#ccc"  data-relation="3" ng-click="clickBtn(4)">子 女</div>
+			<div class="column_btn linshi" data-relation="3" ng-click="clickBtn(4)">子 女</div>
 		</div>
 	</div>
 	<div class="target_btn" ng-click="goUserInfoNew()">下一步</div>
