--- a/app/sass/userinfo_new.scss
+++ b/app/sass/userinfo_new.scss
@@ -1,6 +1,12 @@
  @import "base/classes.scss";
  @import "base/variables.scss";
  body {background: #f5f5f5;}
+ .no {
+ 	// 禁止点击
+ 	pointer-events:none;
+ }
+ .aa { height: 60px;width: 100%;position: absolute;top: 3px;}
+ .yy { height: 60px;width: 100%;position: absolute;top: 3px;}
  .userinfo_new {
  	padding: .258rem 0;
  	font-size: 15px;
