--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -60,10 +60,11 @@
           </div>
          <div class="pannel__body__item"   ng-click="goPromote(4)">
           <i class="iconfont icon_size" >&#xe629;</i>
-          <div class="pannel__body__item_bar"> 意外保障
+          <div class="pannel__body__item_bar"> 
+            <div class="pannel__body__item_head">意外保障</div>
             <div class="pannel__body__item_des">造成的损失大，建议优先提升</div>
           </div>
-          <i class="iconfont arrow_size"  >&#xe60f;</i>
+          <i class="iconfont arrow_size" >&#xe60f;</i>
           </div> 
         <div class="pannel__body__item"   ng-click="goPromote(2)">
           <i class="iconfont icon_size" >&#xe62a;</i>
