--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -168,6 +168,7 @@ body{
 			-webkit-appearance:none;
 			height:45px;
 			border:none;
+			font-size: 15px;
 		}
 		.new-input::-webkit-input-placeholder { 
 			color:#ccc;
@@ -203,6 +204,7 @@ body{
 			-webkit-appearance:none;
 			height:45px;
 			border:none;
+			font-size: 15px;
 		}
 		.new-input::-webkit-input-placeholder { 
 			color:#ccc;
