--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -26,7 +26,7 @@
 		<li ng-repeat="plan in data.plans">
 			<div class="product">	
 				<div class="name">{{plan.name}}</div>	
-				<div class="duration" ng-show="plan.startDate && plan.endDate">{{plan.startDate | date:'yyyy-MM-dd'}}至{{plan.endDate | date:'yyyy-MM-dd'}}</div>
+				<div class="duration" ng-show="plan.startDate && plan.endDate && plan.coverage_period_type!=1">{{plan.startDate | date:'yyyy-MM-dd'}}至{{plan.endDate | date:'yyyy-MM-dd'}}</div>
 				<div class="reason">{{getTaocanReason(plan.status)}}</div>
 
 				<div class="reason"  ng-show="tbform.effectivedate.$dirty && tbform.effectivedate.$invalid ">
@@ -34,7 +34,7 @@
 					<small class="error" ng-show="tbform.effectivedate.$error.min">生效日期不得早于{{minDate | date:'yyyy-MM-dd'}}</small>
 					<small class="error" ng-show="tbform.effectivedate.$error.max">生效日期不得大于{{maxDate | date:'yyyy-MM-dd'}}</small>
 				</div>
-				<div class="money">保额:{{processSpecialMoney(plan.sum_insured)}}  &nbsp;&nbsp;保{{coverage_period ||  plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>
+				<div class="money">保额:{{processSpecialMoney(plan.sum_insured)}}  &nbsp;&nbsp;<span ng-show="plan.coverage_period_type!=1">保{{coverage_period ||  plan.coverage_period}}</span>{{getCoverageType(plan.coverage_period_type)}}</div>
 			</div>
 			<div class="money-container">
 				<span class="fee">{{plan.premium}}元</span>		<span class="fr" style="display: none">20年交清  <span class="modify">修改</span></span>
