--- a/app/sass/newindex_part.scss
+++ b/app/sass/newindex_part.scss
@@ -14,6 +14,19 @@
 	background-color: #4285f4;
 	height:100%;
 }
+.gift {
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  position: absolute;
+  top: -4px;
+  right: 0;
+  // background: url(../img/index/gift.png) no-repeat center;
+  // background-size: 22px;
+  z-index:10;
+  cursor: pointer;
+}
 .dash {
 	// padding: 10px 35px;
 	padding-top: 35px;
@@ -37,11 +50,11 @@
 	@include flex(1);
 }
 .pannel-container {
-	padding: 10px;
-	margin-bottom:80px;
+	padding: 0 10px;
+	margin-bottom: 60px;
 }
 .pannel {
-	padding: 0 15px 7.5px;
+	padding: 0 15px;
 	border-radius: 5px;
 	background-color: #FFF;
 }
@@ -88,6 +101,7 @@
 	@include border(0 0 1px 0, #e2e2e2);
 	@include flexbox;
 	@include align-items(center);
+	font-size: 15px;
 }
 .progress {
 	background-color: #f0f0f0;
@@ -95,7 +109,7 @@
 	position: relative;
 	border-radius: 8px;
 	width:100%;
-	margin-top:5px;
+	// margin-top:5px;
 }
 .progress_innerbar {
 	width: 0;
@@ -107,6 +121,7 @@
 .icon_size{
 	color:#999;
 	font-size:25px;
+	line-height: 25px;
 }
 
 .arrow_size{
@@ -130,6 +145,11 @@
 }
 .pannel__body__item_head {
 	line-height: 15px;
+	margin-bottom: 5px;
+}
+.pannel__body__item_yiyou {
+	line-height: 15px;
+	margin-bottom: 9px;
 }
 .pannel__body__item_des{
 	color:#999;
@@ -144,7 +164,7 @@
 }
 .pannel__body__item_btn{
     width: 120px;
-	border-radius:8px;
+	border-radius: 6px;
 	color:#4285f4;
 	border:1px solid #e2e2e2;
 	box-sizing: border-box;
