--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -10,7 +10,7 @@
   </div>
  
 
-  <div class="navigation" style="padding: 20px 40px;">
+  <div class="navigation" style="padding: 20px 0;">
     <div class="navigation__leftbtn"></div>
     <div class="navigation__name">
       <div style="line-height: 12px;">本人 杨先生</div> 
