--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -16,7 +16,7 @@
 					<div class="insured-item ">
 						<span class="gray three_word">保单号</span><span>：</span>
 						{{data.policy_no}}
-						<div class="score">{{data.score | number:2}}<span class="colr">分</span></div>
+						<div class="score" ng-click="goScoreReading()">{{data.score | number:2}}<span class="colr">分</span></div>
 					</div>
 					<div class="insured-item">
 						<span class="gray three_word">被保人</span><span>：</span>
@@ -73,7 +73,7 @@
 				<div class="bd-wrapper"  style="display: block;"><!-- ng-if="data.image_urls.length>0" -->
 					<div  class="bd-name">
 					保单照片
-					<div  class="yanzhen-btn fr " ng-class="{'fail':data.status==2}" ng-show="data.status==1" ng-click="policy_verfiy()">{{yanzhentext}}</div>
+					<div  class="yanzhen-btn fr success" ng-class="{'fail':data.status==2}" ng-show="data.status==1" ng-click="policy_verfiy()">{{yanzhentext}}</div>
 					<div  class="yanzhen-btn fr success" ng-show="data.status==3">验真成功</div>
 					<div  class="yanzhen-btn fr fail success" ng-show="data.status==4">验真失败</div>
 					<div  class="yanzhen-btn fr fail success" ng-show="data.status==2">验真中</div>
@@ -238,7 +238,7 @@
 					<div class="insured-name">
 						<span class="gray fontW">被保人：</span>
 						诺小贝
-						<div class="score">8分</div>
+						<div class="score" ng-click="goScoreReading()">8分</div>
 					</div>
 				</div>
 
