simple auto commit

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -294,11 +294,11 @@ footer {
   padding: 7px 0 5px;
   text-align: center;
   color: #4c87d6;
-  background-color: #1e4e8e;
+  background-color: #fff;
 }
-.cell-footer.hover {
+/*.cell-footer.hover {
   color: #fff;
-}
+}*/
 .cell-footer  .icon,
 .icon_hover {
   height: 22px;
