--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -1,4 +1,4 @@
-<div id="wrapper" class="wrapper"  data-ng-init="init()">
+<div id="wrapper" class="wrapper"  data-ng-init="init()"  cg-busy="loadingPromise">
 
 <div class="gift" ng-click="showToast()"><i class="iconfont" style="color:#97bfff">&#xe627;</i></div>
 
@@ -13,7 +13,7 @@
   <div class="navigation" style="padding: 20px 0;">
     <div class="navigation__leftbtn"></div>
     <div class="navigation__name">
-      <div style="line-height: 12px;">本人 杨先生</div> 
+      <div style="line-height: 12px;">本人</div> 
       <!-- <div></div>  -->
     </div>
     <div class="navigation__rightbtn"></div>
@@ -104,12 +104,7 @@
   </div>
 
 
-  <!-- <script type="text/javascript" src="js/dashboard.js"></script> -->
-
-  <script>
-    
-    
-  </script>
+ 
 
 
 </div>
