--- a/app/sass/newindex_part.scss
+++ b/app/sass/newindex_part.scss
@@ -2,7 +2,7 @@
 * @Author: fanzhang
 * @Date:   2016-08-15 18:53:28
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-08-17 15:15:05
+* @Last Modified time: 2016-08-19 15:16:33
 */
 @import "base/classes.scss";
 @import "base/variables.scss";
@@ -94,6 +94,11 @@
 .pannel__body {
 	@include flexbox;
 	@include flex-direction(column);
+	
+}
+.pannel__body-init{
+	padding:0 25px 23px 0;
+	@include align-items(center);
 }
 .pannel__body__item {
 	@include flex(1);
@@ -172,4 +177,16 @@
 	font-size:15px;
 	line-height: 36px;
 	text-align: center;
+}
+.pannel__body_tip{
+	font-size:16px;
+	color:#444;
+	margin-top:40px;
+}
+
+.pannel__body_des{
+	margin:20px 0;
+	font-size:12px;
+	color:#999;
+	text-align:center;
 }
