--- a/app/css/newindex_part.css
+++ b/app/css/newindex_part.css
@@ -53,42 +53,14 @@
   padding: 0 10px;
   margin-bottom: 60px; }
 .pannel {
-  padding: 0 15px;
   border-radius: 5px;
   background-color: #FFF; }
 .pannel__nav {
-  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
   display: flex; }
-  .pannel__nav::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: #b5b5b5;
-    border-style: solid;
-    border-width: 0 0 1px 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      .pannel__nav::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      .pannel__nav::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
 .pannel__nav__item {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -114,9 +86,9 @@
   content: "";
   position: absolute;
   height: 3px;
-  width: 70%;
+  width: 63%;
   bottom: 0;
-  left: 16%;
+  left: 18.5%;
   background-color: #4285f4; }
 .pannel__body {
   display: -webkit-box;
@@ -127,9 +99,36 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  position: relative; }
+  .pannel__body::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #b5b5b5;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .pannel__body::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .pannel__body::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
 .pannel__body-init {
-  padding: 0 25px 23px 0;
+  padding: 0 0 23px 0;
   -webkit-box-align: center;
   -webkit-align-items: center;
   align-items: center; }
@@ -176,6 +175,8 @@
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.pannel__body__item:active {
+  background: #f5f5f5; }
 .progress {
   background-color: #f0f0f0;
   height: 8px;
@@ -194,7 +195,8 @@
   line-height: 25px; }
 .arrow_size {
   color: #999;
-  font-size: 15px; }
+  font-size: 15px;
+  vertical-align: -1px; }
 .pannel__body__item_icon {
   width: 50px;
   text-align: center; }
@@ -223,21 +225,39 @@
 .pannel__body__item_title {
   color: #444;
   font-size: 15px;
-  padding: 25px 5px 25px 13px;
+  padding: 25px 5px 25px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between; }
+.empty {
+  padding: 0 15px; }
+.pannel__body__item_fen {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  text-align: center; }
 .pannel__body__item_btn {
   width: 120px;
   border-radius: 6px;
   color: #4285f4;
-  border: 1px solid #e2e2e2;
+  border: 1px solid #4285f4;
   box-sizing: border-box;
   font-size: 15px;
-  line-height: 36px;
-  text-align: center; }
+  height: 33px;
+  line-height: 31px;
+  text-align: center;
+  background: #fff; }
+.pannel__body__item_btn:hover {
+  background: #266ada; }
 .pannel__body_tip {
-  font-size: 12px;
+  font-size: 16px;
   color: #999;
   margin-top: 40px; }
 .pannel__body_des {
