simple auto commit

--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -6,11 +6,11 @@
   <canvas id="dash_bg_container" >
    
   </canvas>
-  <canvas  id="dash_container" style="position: absolute; left: 0px; top: 35px; background: transparent;" ></canvas>
+  <canvas  id="dash_container" style="position: absolute; left: 0px; top: 45px; background: transparent;" ></canvas>
   </div>
  
 
-  <div class="navigation" style="padding: 20px 0;">
+  <div class="navigation" style="padding: 20px 0 30px;">
     <div class="navigation__leftbtn"></div>
     <div class="navigation__name">
       <div style="line-height: 12px;">本人</div> 
