--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" type="text/css" href="/css/temai_detail.css?rev=012d87e353b8d3c9e7ecb65a89977dd0">
 <div  cg-busy="myPromise" class="temaidetail-wrapper" >
 	<header>
 		<div class="top-container" >
