--- a/app/template/new/product_195.html
+++ b/app/template/new/product_195.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/zyseyw01.png" ></div>
+				<img src="img/product/hzhxzj.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -67,52 +67,47 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>已经用社保报销了一部分医疗费用，还能走报销吗？</div>	</div>	
+				<div class="qa-content"><div>初次患本合同所列的轻症疾病、重大疾病是指？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>经社保报销后，保险公司仅报销，社保报销后剩余的部分。</div>	
+					<div>初次患本合同所列的轻症疾病、重大疾病是指被保险人患同时符合以下条件的疾病:
+					<br>(1)被保险人自出生后首次出现疾病之症状体征;</br>
+					<br>(2)被保险人在本合同有效期间内首次出现疾病之症状体征并被确诊患该疾病;</br>
+					<br>(3)该疾病之症状体征符合本合同的定义;</br>
+					<br>(4)该疾病已在本合同中列明。</br>
+					<br>对于被保险人在本合同生效日前出现的本合同所列的疾病之症状体征或所患的疾病,保险公司不承担保险责任。</br></div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>刚出生半年的婴儿能投保该产品吗？</div></div>	
+				<div class="qa-content"><div>本产品对医院有要求吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>可以的，本产品承保年龄范围是30天到17岁。</div>	
+					<div>本产品认可的医院是指经中华人民共和国卫生部门正式评定的二级或以上之公立医院,但不包括上述医院的分院、联合病房或联合病床,精神病院,专供康复、休养、戒毒、戒酒、护理、养老等非以直接诊治病人为目的的医疗机构。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>因为意外受伤的治疗费用都能报销吗？</div></div>	
+				<div class="qa-content"><div>这个产品有等待期吗？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>本产品意外医疗0元起赔，最高报销上限是1万元。</div>
+					<div>该产品在您购买成功的次日零时开始生效，生效后有90天的观察期，后期续保不会再重新计算观察期。</div>
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>刚出生半年的婴儿能投保该产品吗？</div></div>	
+				<div class="qa-content"><div>重大疾病保险金、疾病终末期保险金可以累加吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>可以的，本产品承保年龄范围是30天到17岁。</div>	
-				</div>
-			</li>
-			<li class="qa-item  question hide">
-				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>每个小孩能投保几份？</div></div>	
-			</li>
-			<li class="qa-item answer hide">
-				<div class="qa-icon" ></div>	
-				<div class="qa-content">
-					<div>该产品每位被保险人最多投3份。</div>
+					<div>该产品因发生其中一项理赔保险合同即终止，故不支持累加。</div>	
 				</div>
 			</li>
 			</ul>
