--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -141,13 +141,13 @@
 </div>
 <div class="fix_container select_btn " >
     <div class="cell_hd cell_primary " >
-    <div class="cell-footer hover" ng-click="goIndex($event)"><i class="iconfont">&#xe61b;</i><div>首页</div></div>
+    <div class="cell-footer hover" ng-click="goIndex($event)"><i class="iconfont">&#xe61b;</i><div class="lh">首页</div></div>
     </div>
     <div class="cell_hd cell_primary">
-      <div class="cell-footer" ng-click="goTemai($event)"><i class="iconfont">&#xe623;</i><div>严选</div></div>
+      <div class="cell-footer" ng-click="goTemai($event)"><i class="iconfont">&#xe623;</i><div class="lh">严选</div></div>
     </div>
     <div class="cell_hd cell_primary">
-      <div class="cell-footer" ng-click="goService($event)"><i class="iconfont">&#xe60a;</i><div>服务</div></div>
+      <div class="cell-footer" ng-click="goService($event)"><i class="iconfont">&#xe60a;</i><div class="lh">服务</div></div>
     </div>
 </div>
 <script>
