--- a/app/css/newindex_part.css
+++ b/app/css/newindex_part.css
@@ -14,6 +14,8 @@
   right: 0;
   z-index: 10;
   cursor: pointer; }
+  .gift i:active {
+    color: #266ada; }
 .dash {
   padding-top: 35px;
   background-color: #4285f4;
@@ -265,3 +267,5 @@
   font-size: 16px;
   color: #444;
   text-align: center; }
+.lh {
+  line-height: 12px; }
