--- a/app/sass/newindex_part.scss
+++ b/app/sass/newindex_part.scss
@@ -26,6 +26,9 @@
   // background-size: 22px;
   z-index:10;
   cursor: pointer;
+  i:active {
+  	color: #266ada;
+  }
 }
 .dash {
 	// padding: 10px 35px;
@@ -211,4 +214,7 @@
 	font-size:16px;
 	color:#444;
 	text-align:center;
+}
+.lh {
+	line-height: 12px;
 }
