simple auto commit

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -293,7 +293,7 @@ footer {
   height: 50px;
   padding: 7px 0 5px;
   text-align: center;
-  color: #4c87d6;
+  color: #4285f4;
   background-color: #fff;
 }
 /*.cell-footer.hover {
