--- a/app/sass/newindex_part.scss
+++ b/app/sass/newindex_part.scss
@@ -2,7 +2,7 @@
 * @Author: fanzhang
 * @Date:   2016-08-15 18:53:28
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-08-19 17:24:43
+* @Last Modified time: 2016-08-22 10:55:16
 */
 @import "base/classes.scss";
 @import "base/variables.scss";
@@ -189,6 +189,7 @@
 	color:#4285f4;
 	border:1px solid #4285f4;
 	box-sizing: border-box;
+	// @include border(1px 1px 1px 1px, #4285f4);
 	// padding:.08rem .17rem;
 	font-size:15px;
 	height: 33px;
@@ -196,8 +197,10 @@
 	text-align: center;
 	background: #fff;
 }
-.pannel__body__item_btn:hover{
-	background: #266ada;
+.pannel__body__item_btn:active{
+	// background-color: #266ada;
+	background-color: #f5f5f5;
+	// color:#fff;
 }
 .pannel__body_tip{
 	
