--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -64,7 +64,7 @@
           </div>
 
             <div class="pannel__body__item"  ng-click="goBaodan(1)">
-          <i class="iconfont icon_size" >&#xe61c;</i>
+          <i class="iconfont icon_size" >&#xe62f;</i>
           <div class="pannel__body__item_bar"> 
             <div class="pannel__body__item_yiyou">家庭保障</div>
             <div class="progress"><div class="progress_innerbar"  style="width:{{data.scores[1]*10}}%;"></div></div></div>
@@ -114,7 +114,7 @@
           </div> 
       
           <div class="pannel__body__item"  ng-click="goPromote(1)">
-          <i class="iconfont icon_size" styl>&#xe61c;</i>
+          <i class="iconfont icon_size" styl>&#xe62f;</i>
           <div class="pannel__body__item_bar">  
             <div class="pannel__body__item_head">家庭保障</div>
             <div class="pannel__body__item_des">先保收入支柱，再保老人小孩</div></div>
