缺分享追踪逻辑调整

--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -167,7 +167,7 @@
 	<div class="tail-container">
 		<div class="cell ">
 			<div class="cell_hd cell_primary">
-				<a onclick="_hmt.push(['_trackEvent', 'bdm_detail', 'bdmDetail_productTerms'])" href="/ybwx-web/api/web_page/{{data.provision_id}}" style="color:#555;">
+				<a onclick="_hmt.push(['_trackEvent', 'bdm_detail', 'bdmDetail_productTerms'])" href="/api/web_page/{{data.provision_id}}" style="color:#555;">
 				<div class="img-box">
 					<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe606;</i>
 				</div>
