--- a/app/partials/detail.html
+++ b/app/partials/detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/product_detail.css?rev=059061230515fd7b8a12901871e30d08">
+<link rel="stylesheet" type="text/css" href="css/product_detail.css?rev=59862299f3179d009490dd3988d7608b">
 
 <div class="mask " id="detail_mask_container"  style="display: none;z-index:100000">
   <div class="head-container">
@@ -76,7 +76,7 @@
     <span class="subtitle">&nbsp;{{data.insurance_second_type}}&nbsp;&nbsp;</span>
     <span class="fr">
       查看
-      <a href="ybwx-web/api/web_page/{{data.information_page_id}}" target="_blank">
+      <a href="/api/web_page/{{data.information_page_id}}" target="_blank">
         <span class="blue">投保须知</span>
       </a>
     </span>
