--- a/app/template/new/product_103.html
+++ b/app/template/new/product_103.html
@@ -63,10 +63,10 @@
 
 	<div class="button-container">
 		<div class="left">
-			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/120" class="weui_btn weui_btn_plain_more">产品条款</a>
+			<a href="/api/web_page/120" class="weui_btn weui_btn_plain_more">产品条款</a>
 		</div>
 		<div class="right">
-			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=37" class="weui_btn weui_btn_plain_more">理赔资料</a>
+			<a href="http://wechat.nuobei.cn/#/claim_information?claim_id=37" class="weui_btn weui_btn_plain_more">理赔资料</a>
 		</div>
 	</div>
 
