--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -28,15 +28,15 @@
 			<ul class="layout bd_part_tit">
 				<li class="left" >投保信息</li>
 				<!-- <li class="right">
-					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">产品条款及投保须知
+					<a href="/api/web_page/130" class="blue"  ng-if="coupon_id==2">产品条款及投保须知
 					</a>
-					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">
+					<a href="/api/web_page/1" class="blue"  ng-if="coupon_id==1">
 					产品条款及投保须知
 					</a>
-					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="blue"  ng-if="coupon_id==3">
+					<a href="/api/web_page/11" class="blue"  ng-if="coupon_id==3">
 					产品条款及投保须知
 					</a>
-					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/17" class="blue"  ng-if="coupon_id==4">
+					<a href="/api/web_page/17" class="blue"  ng-if="coupon_id==4">
 					产品条款及投保须知
 					</a>
 				</li> -->
@@ -87,16 +87,16 @@
 			<div class="item">
 				<input type="checkbox" id="chek" checked="checked" ng-model="user.know_contract" name="know_contract" required >
 					我已阅读
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">
+				<a href="/api/web_page/130" class="blue"  ng-if="coupon_id==2">
 					产品条款及投保须知
 				</a>
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">
+				<a href="/api/web_page/1" class="blue"  ng-if="coupon_id==1">
 					产品条款及投保须知
 				</a>
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="blue"  ng-if="coupon_id==3">
+				<a href="/api/web_page/11" class="blue"  ng-if="coupon_id==3">
 					产品条款及投保须知
 				</a>
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/17" class="blue"  ng-if="coupon_id==4">
+				<a href="/api/web_page/17" class="blue"  ng-if="coupon_id==4">
 					产品条款及投保须知
 				</a>
 			</div>
