--- a/app/template/new/product_30.html
+++ b/app/template/new/product_30.html
@@ -56,8 +56,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/78" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=18" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="/api/web_page/78" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://wechat.nuobei.cn/#/claim_information?claim_id=18" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
