--- a/app/template/new/product_45.html
+++ b/app/template/new/product_45.html
@@ -43,7 +43,7 @@
 			<h4>1.承保年龄</h4>
 			<p>首次投保年龄限18-49岁，续保最高可至64岁。</p>
 			<h4>2.定点医院说明</h4>
-			<p>因意外伤害事故需在二级及以上医院接受门诊或者急诊治疗；因疾病急诊需在二级及以上医院接受治疗；因疾病需在定点医院接受门诊治疗。<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/246" >点此查看定点医院</a></p>
+			<p>因意外伤害事故需在二级及以上医院接受门诊或者急诊治疗；因疾病急诊需在二级及以上医院接受治疗；因疾病需在定点医院接受门诊治疗。<a href="/api/web_page/246" >点此查看定点医院</a></p>
 			<h4>3.等待期</h4>
 			<p>本保险门急诊保障责任等待期为30天，等待期内，被保险人非因意外伤害事故发生门诊或者急诊的，保险不承担赔付责任。住院津贴保障责任等待期为90天。</p>
 			<h4 class="hide">4.免赔额/起赔线 </h4>
@@ -58,8 +58,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/109" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=11" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="/api/web_page/109" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://wechat.nuobei.cn/#/claim_information?claim_id=11" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
